--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -66,7 +66,7 @@
 
 /* Custom scrollbar */
 ::-webkit-scrollbar {
-  width: 6px;
+  display: none;
 }
 
 ::-webkit-scrollbar-track {
@@ -74,10 +74,15 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgba(26, 26, 26, 0.1);
+  background: rgba(26, 26, 26, 0.05);
   border-radius: 9999px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: rgba(26, 26, 26, 0.2);
+  background: rgba(26, 26, 26, 0.1);
+}
+/* Firefox scrollbar */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(26, 26, 26, 0.05) transparent;
 }
